src/assets/style/code.scss
#app pre,
#app code {
  font-family: Space Mono,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
  background-color: var(--code-color);
  border-radius: 3px;
  font-feature-settings: "liga" 0;
}

#app pre {
  border: 1px solid rgba(0,0,0,.05);
  background-color: var(--code-color-block);
}


#app pre code {
  background-color: transparent;
}


#app pre {
  // fix for accessbility
  .token.punctuation {
    color: #5f5f5f;
  }
  .token.attr-name,
  .token.builtin,
  .token.char,
  .token.inserted,
  .token.selector,
  .token.string {
    color: #007900;
  }
}

// code blocks
#app pre {
  padding: 1em 0 1em 1em;
  margin-bottom: 2.0em;
}

// inline code
#app code {
  padding: 0.2em 0.5em;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

h1, h2, h3, h4 {
  code {
    font-size: 0.85em;
  }
}

